--- a/笔记/JS笔记/05-ES6.md
+++ b/笔记/JS笔记/05-ES6.md
@@ -1551,7 +1551,7 @@ CORS详细在MDN上查找
 
 #### CORS解决跨域的方法
 
-一、后端的代码：`res.header({'Access-Control-Allow-Origin':'*'})`
+一、后端的代码：`res.setHeader('Access-Control-Allow-Origin', '*')`
 
 二、在node开发中：
 
