--- a/笔记/JS笔记/05-ES6.md
+++ b/笔记/JS笔记/05-ES6.md
@@ -57,7 +57,8 @@ function (num){
 
 function (num){
     {
-        let num;			//不报错，因为不是同一个作用域
+        let num = 1;			//不报错，因为不是同一个作用域
+        console.log(num)		//不打印num
     }
 }
 ```
@@ -157,7 +158,7 @@ for (var j = 0; j < 5; j++) {
 之前解决办法：利用闭包：自执行函数（执行完后就销毁i）
 ```
 
-将上述for循环内的var声明改为let声明，就可以触发闭包的作用
+将上述for循环内的**var声明改为let声明**，就可以触发闭包的作用
 
 ------
 
@@ -165,10 +166,10 @@ for (var j = 0; j < 5; j++) {
 
 ### 数组的解构赋值
 
-定义：按照一定的模式，从数组中提取值，然后再对变量进行赋值
-
-语法：`let [a,b,c] = ['草莓','苹果','尖尖']`
-此时的 a 就是 ‘ 草莓 ’   ， b 就是 ' 苹果 '   ， c 就是 '尖尖'	a b c就是变量名
+> 定义：按照一定的模式，从数组中提取值，然后再对变量进行赋值
+>
+> 语法：`let [a,b,c] = ['草莓','苹果','尖尖']`
+> 此时的 a 就是 ‘ 草莓 ’   ， b 就是 ' 苹果 '   ， c 就是 '尖尖'	a b c就是变量名
 
 因此交换变量值，可以用：`[a,b] = [b,a]`，省去了中间变量的操作
 
@@ -240,7 +241,7 @@ for (var j = 0; j < 5; j++) {
 > let { a = 'aaa', b = 'bbb', c = a } = { a: 1, b: 2, c: 'max' }
 > //结果：a 是 1 ，b 是 2 ，c 是 max
 > let { A = 'aaa', B = 'bbb', C = a } = { A, B: 2, C: 'max' }
-> //结果：erro，A错误	因为A再没有定义之前就使用了，因为没有给值（给''也是给值）
+> //结果：erro，A错误	因为A在没有定义之前就使用了，因为没有给值（即等号右边的属性A没有赋值）（给''也是给值）
 > let { x = 'aaa', y = 'bbb', z = a } = { x:null, y: 2, z: 'max' }
 > //结果： x 是 null ，y 是 2 ， z 是 max
 > let { i = 'aaa', j = 'bbb', k = a } = { i:undefined, j: 2, k: 'max' }
@@ -300,13 +301,13 @@ let { obj: { surname: my_surname } } = Person;
 >
 > ```js
 > let Person = {
->     name: 'wz',
->     age: 18,
->     sex: 'male',
->     obj123: {
->         surname: 'w',
->         EnglishName: 'max'
->     }
+>    	name: 'wz',
+>    	age: 18,
+>    	sex: 'male',
+>    	obj123: {
+>    	    surname: 'w',
+>    	    EnglishName: 'max'
+>    	}
 > }
 > 
 > function fn({ name, age } = obj) {	//obj是一个形参
@@ -331,7 +332,7 @@ let { obj: { surname: my_surname } } = Person;
 >
 > ```js
 > function fn({ name = 'wz', age = 18 } = obj) {
->     console.log(name, age);
+>    	console.log(name, age);
 > }
 > ```
 
@@ -382,13 +383,13 @@ es6新增函数
 >
 > 如果形参只有一个，可以省略小括号 `let sum = c => c * 100;`
 >
-> 注：不能返回一个实际对象	let obj = id => { id : id , name : ' wz ' }	这样写会报错
+> 注：不能返回一个实际对象	`let obj = id => { id : id , name : ' wz ' }`	这样写会报错（双大括号也会报错）
 > 因为将{}解析为代码块了，而非对象的括号
-> 解决办法：let obj = id => ({ id : id , name : ' wz ' })	大括号外面加小括号
+> 解决办法：`let obj = id => ({ id : id , name : ' wz ' })`	大括号外面加小括号	obj的引用：`obj().name`
 
 ### 箭头函数this指向
 
-箭头函数没有自己的this，但是它可以继承上一层的构造函数
+箭头函数没有自己的this，但是它可以**继承上一层的构造函数**
 
 #### this
 
@@ -431,7 +432,7 @@ es6中，顶层对象是global
 > 	Myage: this.age,
 > 	sing: function() {
 > 		console.log(this.name + ' 的年龄是 ' + this.age);		//结果：wz 的年龄是 undefined
->          console.log(this.name + ' 的年龄是 ' + this.Myage);	 //结果：wz 的年龄是 18
+>    		console.log(this.name + ' 的年龄是 ' + this.Myage);	 //结果：wz 的年龄是 18
 > 	}
 > }
 > console.log(obj.Myage);		//结果：18
@@ -480,6 +481,7 @@ let wz = {
 ```
 
 推广：定义（包含）箭头函数的作用域里面this指向谁，那么箭头函数内的this就指向谁
+即：箭头函数会继承上一级的this。上一级指向obj，就指向obj；上一级指向window，就指向window
 
 如：
 
@@ -611,7 +613,6 @@ fn('a', 'b', 'c', 'd')
 > > //结果：['a', 'b', 'c', 'd', 123]
 > > ```
 > >
-> > 
 
 ### 扩展作用
 
@@ -739,6 +740,8 @@ for (let index of arr.keys())
 
 #### Array.from()
 
+> 作用：将arr伪数组转化为数组（与reset参数的作用一样）
+>
 > 语法：`Array.from(arr , p2 , p3 )`
 >
 > 参数：arr：需要被转化成数组的伪数组对象
@@ -748,7 +751,6 @@ for (let index of arr.keys())
 >
 > ​		   p3：用于绑定this，默认值是指向window
 >
-> 作用：将arr伪数组转化为数组（与reset参数的作用一样）
 
 如：
 
