--- a/笔记/JS笔记/05-ES6.md
+++ b/笔记/JS笔记/05-ES6.md
@@ -1436,6 +1436,24 @@ Ajax_Post('http:localhost:8000/', 'name:"wz"', res => {	//data形参处，字符
 })
 ```
 
+### 请求头中的Content-Type
+
+> 1、传统的ajax请求时候，`Content-Type`默认为"文本"类型。
+>
+> 2、传统的form提交的时候，`Content-Type`默认为"Form"类型。
+>
+> 3、axios传递字符串的时候，`Content-Type`默认为"Form"类型。		即xxx-form-xxx 
+>
+> 4、axios传递对象的时候，`Content-Type`默认为"JSON"类型
+
+Content-Type的值，Form与非Form时，payload的区别：
+
+> 1、都只支持字符串类型(以上探究的几种情况)
+>
+> 2、Form需要传递的格式为`key1=value1&key2=value2`,类似`GET`请求的`QueryString`格式
+>
+> 3、非Form一般为`JSON.stringify(formDataObject)`形式
+
 ### 请求超时和网络异常
 
 如果网络请求时间很长或网络异常，则AJAX请求会一直持续很长时间，用户体验差
