--- a/笔记/JS笔记/05-ES6.md
+++ b/笔记/JS笔记/05-ES6.md
@@ -738,16 +738,17 @@ for (let index of arr.keys())
 
 ### 数组新增方法
 
-#### Array.from()
+#### Array.from ( )
 
 > 作用：将arr伪数组转化为数组（与reset参数的作用一样）
 >
-> 语法：`Array.from(arr , p2 , p3 )`
+> 语法：`Array.from(arr, p2, p3 )`
 >
 > 参数：arr：需要被转化成数组的伪数组对象
 >
 > ​		   p2：类似数组的map方法，对每个元素进行处理，并将处理好的值放到 retrun中
 > ​				  p2是一个function，形参只有两个currentValue和index，并没有map()的第三个形参arr
+> ​				  即：`(currentValue, index) => {}`
 >
 > ​		   p3：用于绑定this，默认值是指向window
 >
@@ -768,7 +769,7 @@ for (let index of arr.keys())
             console.log('val', val);		//结果：四个dom对象
             console.log('index', index);	//结果：0，1，2，3
             return val
-        }, [])
+        }, [])	// 将处理好的val传到新的空数组[]中
         console.log(arr);
         //结果：[div, div, div, div]
     </script>
@@ -797,9 +798,10 @@ for (let index of arr.keys())
 
 #### findIndex()
 
-find和indexOf的结合，找的是位置，找到则返回索引值（下标index），**找到一个后就返回**；没有找到则返回-1
-
-语法：arr.findIndex ( function ( item , index , arr )  {} )
+> 作用：find和indexOf的结合，找的是位置，找到则返回索引值（下标index），**找到一个后就返回**；没有找到则返回-1
+>
+> 语法：`arr.findIndex ( function ( item , index , arr )  {} )`
+>
 
 #### fill()
 
